--- a/index.html
+++ b/index.html
@@ -4,98 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EquiTerra</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      scroll-behavior: smooth;
-      background: #f4f4f4;
-    }
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #0a4d3c;
-      padding: 15px;
-      z-index: 1000;
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 10px 15px;
-      border-radius: 5px;
-    }
-    nav a.active {
-      background: #14a37f;
-    }
-    #hero {
-      height: 70vh;
-      background: url('logo.png'), url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee') center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: white;
-      padding: 20px;
-    }
-    #hero h1 {
-      font-size: 3rem;
-      text-shadow: 2px 2px 8px #000;
-    }
-    section {
-      padding: 80px 5%;
-      margin-top: 60px;
-    }
-    h2 {
-      text-align: center;
-      color: #0a4d3c;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 1s ease, transform 1s ease;
-    }
-    .card.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    footer {
-      background: #0a4d3c;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-    .socials a {
-      color: white;
-      margin: 0 10px;
-      font-size: 1.5rem;
-      text-decoration: none;
-    }
-  </style>
-</head>
+  <link rel="stylesheet" href="style.css">
+ </head>
 <body>
-  <nav>
+<nav>
+  <div class="logo">
+    <img src="images/equtier.jpg" alt="EquiTerra Logo" />
+  </div>
+  <div class="nav-links">
     <a href="#hero" class="nav-link">Home</a>
     <a href="#summary" class="nav-link">Summary</a>
     <a href="#objectives" class="nav-link">Objectives</a>
     <a href="#programs" class="nav-link">Programs</a>
     <a href="#contact" class="nav-link">Contact</a>
-  </nav>
+  </div>
+</nav>
 
   <section id="hero">
     <h1>EquiTerra – Sustainability, Equity & Innovation</h1>
