Page Layout Changes

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
     <!-- SUMMARY -->
     <section id="summary">
-        <h2>Executive Summary</h2>
+        <h2>Programs & Services</h2>
         <div class="grid">
             <div class="card">
+                <div class="icon">🌱</div>
                 <ul>
                     <li>Independent non-profit sustainability think tank based in Huddinge, Sweden.</li>
                     <li>Established October 2024, aligned with UN SDGs.</li>
@@ -58,22 +59,20 @@
 
     <!-- OBJECTIVES -->
     <section id="objectives">
-        <h2>Organizational Objectives</h2>
+        <h2>Programs & Services</h2>
         <div class="grid">
-            <div class="card flip-card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <ul>
-                            <li>Advance multidisciplinary sustainability research.</li>
-                            <li>Promote sustainability literacy and training.</li>
-                            <li>Develop ESGR tools and frameworks.</li>
-                            <li>Advocate for inclusive, green policy reforms.</li>
-                        </ul>
-                    </div>
-                    <div class="card-back">
-                        <p>EquiTerra works across climate, policy, research, education, and innovation to build an equitable sustainable world.</p>
-                    </div>
-                </div>
+            <div class="card">
+                <div class="icon">🌱</div>
+                <ul>
+                    <li>Advance multidisciplinary sustainability research.</li>
+                    <li>Promote sustainability literacy and training.</li>
+                    <li>Develop ESGR tools and frameworks.</li>
+                    <li>Advocate for inclusive, green policy reforms.</li>
+                </ul>
+            </div>
+            <div class="card-back">
+                <p>EquiTerra works across climate, policy, research, education, and innovation to build an equitable
+                    sustainable world.</p>
             </div>
         </div>
     </section>
