Page Layout Changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
     <!-- HERO -->
     <section id="hero" class="animated-bg">
-        <h1>EquiTerra – Sustainability, Equity & Innovation</h1>
+        <!--h1>EquiTerra – Sustainability, Equity & Innovation</h1 -->
+        <img src="images/eqtse.png" alt="EquiTerra background">
     </section>
 
     <div class="divider"></div>
@@ -103,7 +104,7 @@
         <h2>Contact</h2>
         <div class="grid">
             <div class="card">📍 Address: Klockarvägen 5, 14161, Huddinge, Sweden</div>
-            <div class="card">✉️ Email: chamalimadanayake@gmail.com</div>
+            <div class="card">✉️ Email: info@equiterra.com</div>
             <div class="card">📞 Phone: +46 76 596 2314</div>
         </div>
     </section>
@@ -111,7 +112,7 @@
 </div> <!-- container end -->
 
 <footer>
-    <p>© 2025 EquiTerra | Non-Profit Sustainability Think Tank</p>
+    <p>© 2024 EquiTerra | Non-Profit Sustainability Think Tank</p>
     <div class="socials">
         <a href="#">🌍</a>
         <a href="#">📘</a>
