Page Layout Changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2>Contact</h2>
         <div class="grid">
             <div class="card">📍 Address: Klockarvägen 5, 14161, Huddinge, Sweden</div>
-            <div class="card">✉️ Email: info@equiterra.com</div>
+            <div class="card">✉️ Email: chamalimadanayake@gmail.com</div>
             <div class="card">📞 Phone: +46 76 596 2314</div>
         </div>
     </section>
